:host::part(foo) selector does not select elements inside shadow roots https://bugs.webkit.org/show_bug.cgi?id=232261 <rdar://problem/84894922>

Reviewed by Simon Fraser.

We need to also look for ::part rules from the element's own scope.

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::match const):

Rename mayMatchHostPseudoClass -> mustMatchHostPseudoClass for clarity.

(WebCore::localContextForParent):
(WebCore::SelectorChecker::matchRecursively const):

Split ShadowDescendant and ShadowPartDescendant handling as they are sufficiently different.
Set nextContext.mustMatchHostPseudoClass bit for ::part rules coming from the Element's scope as
it is the only way they can match.

(WebCore::SelectorChecker::checkOne const):

No name mapping for rules from the element's own scope.

* style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::matchPartPseudoElementRules):
(WebCore::Style::ElementRuleCollector::matchPartPseudoElementRulesForScope):

Also check ::part rules from the element scope.

* style/ElementRuleCollector.h:



Canonical link: https://commits.webkit.org/243873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285262 268f45cc-cd09-0410-ab3c-d52691b4dbfc